--- a/src/component/TitleCard/TitleCard.scss
+++ b/src/component/TitleCard/TitleCard.scss
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     width: 30%;
+    max-width: 460px;
     height: 175px;
-    border: black 1px solid;
+    border: blue 1px solid;
 }
 
 .title-field {
