--- a/src/component/TitleCard/TitleCard.scss
+++ b/src/component/TitleCard/TitleCard.scss
@@ -1,14 +1,15 @@
 .titlecard-container {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    max-width: 460px;
+    justify-content: center;
+    align-items: center;
+    max-width: 420px;
     height: 175px;
     border: blue 1px solid;
 }
 
 .title-field {
-    margin-top: 35px;
+    // margin-top: 35px;
     border-style: none;
     font-size: 32px;
     text-align: center;
@@ -25,6 +26,7 @@
 .small-field {
     border-style: none;
     font-size: 15px;
-    margin: 5px 0 0 0;
-    width: inherit;
+    // width: 20%;
+    // margin: 5px 0 0 0;
+    // width: inherit;
 }
