Button component and card component layout

--- a/src/component/NewEntry/NewEntry.scss
+++ b/src/component/NewEntry/NewEntry.scss
@@ -1,4 +1,17 @@
 .new-entry {
     flex: 3.5;
     border: green 1px solid;
+    display: flex;
+    flex-direction: row;
+}
+
+.devotional-area {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+}
+
+.right-card-area {
+  border: orange 1px solid;
+  flex: 1.5;
 }
