--- a/src/component/PreviousEntry/PreviousEntry.scss
+++ b/src/component/PreviousEntry/PreviousEntry.scss
@@ -1,5 +1,5 @@
 .previous-container {
-    max-width: 420px;
+    // max-width: 420px;
     height: 100px;
     border: blue 1px solid;
     display: flex;
