--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,30 @@
 .App {
   display: flex;
+  border: pink 4px solid;
+  align-self: stretch;
   height: 100%;
-
+  min-height: 100%;
 }
 
-.App-container {
-  flex: 1;
+.sidebar {
+  border: yellow 1px solid;
+  flex: 3;
+  align-items: stretch;
   display: flex;
-  height: 100%;
-
-}
-
-.sidebar{
-  flex: 0.75
+  flex-direction: column;
 }
 
 .main-space {
- flex: 2;
- display: flex;
- flex-direction: column;
+  border: black 1px solid;
+  flex: 8;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.entries-container {
+  flex: 1;
+}
+
+.no-entries-message {
 }
