--- a/src/component/NewEntry/NewEntry.scss
+++ b/src/component/NewEntry/NewEntry.scss
@@ -1,17 +1,64 @@
 .new-entry {
-    flex: 3.5;
-    border: green 1px solid;
-    display: flex;
-    flex-direction: row;
+  flex: 3.5;
+  border: green 1px solid;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+
 }
 
 .devotional-area {
   flex: 3;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
 }
 
 .right-card-area {
   border: orange 1px solid;
   flex: 1.5;
 }
+
+.title {
+  border: none;
+  font-size: 22px;
+  text-decoration: underline;
+  padding: 30px 10px 5px 15px;
+  color: #454545;
+
+  &:hover {
+    outline: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.reflected-passages {
+  border: none;
+  font-size: 15px;
+  padding: 5px 10px 10px 15px;
+
+  &:hover {
+    outline: none;
+  }
+  &:focus {
+    outline: none;
+  }
+}
+
+.content {
+  border: none;
+  font-size: 13px;
+  padding: 30px 10px 10px 15px;
+  height: 100%;
+
+  &:hover {
+    outline: none;
+  }
+  &:focus {
+    outline: none;
+  }
+}
+
