--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,37 @@
-.App {
-  display: flex;
+html, body {
   height: 100%;
-
 }
 
-.App-container {
+#root {
+  height: 100%;
+}
+
+.App {
   flex: 1;
   display: flex;
   height: 100%;
-
 }
 
-.sidebar{
-  flex: 0.75
+.sidebar {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-space {
- flex: 2;
+ flex: 8;
  display: flex;
  flex-direction: column;
+}
+
+.entries-container {
+  flex: 7;
+  display: flex;
+  justify-content: center;
+  background-color: #F4F4F4;
+}
+
+.no-entries-message {
+  margin-top: 70px;
+  color: #5f5f5f;
 }
