--- a/src/App.scss
+++ b/src/App.scss
@@ -25,13 +25,15 @@ html, body {
 }
 
 .entries-container {
-  flex: 7;
+  flex: 13;
   display: flex;
   justify-content: center;
   background-color: #F4F4F4;
 }
 
 .no-entries-message {
+  padding: 10px;
+  font-size: 12px;
   margin-top: 70px;
   color: #5f5f5f;
 }
