--- a/src/component/TitleCard/TitleCard.scss
+++ b/src/component/TitleCard/TitleCard.scss
@@ -2,7 +2,6 @@
     position: relative;
     flex: 4;
     height: 175px;
-    border: blue 1px solid;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -11,13 +10,18 @@
 }
 
 .title-field {
-    width: 70%;
+    width: 100%;
     font-size: 32px;
     text-align: center;
     margin-top: 50px;
+    border:  none;
 
     &:hover {
        outline: none; 
+    }
+
+    &:focus {
+        outline: none;
     }
 }
 
@@ -25,19 +29,26 @@
     width: 50%;
     text-align: center;
     font-size: 15px;
+    border: none;
 
     &:hover {
        outline: none; 
+    }
+
+    &:focus {
+        outline: none;
     }
 }
 
 .new-entry-button {
     position: absolute;
     background-color: #06D6A0;
+    color: #fff;
+    font-weight: bold;
     border: none;
     padding: 10px 32px;
     border-radius: 30px 30px 30px 30px;
-    font-size: 14px;
+    font-size: 12px;
     margin: 10px;
     bottom: 0;
     right: 0;
