--- a/src/App.scss
+++ b/src/App.scss
@@ -25,14 +25,15 @@ html, body {
 }
 
 .entries-container {
-  flex: 13;
   display: flex;
-  justify-content: center;
-  background-color: #F4F4F4;
+  flex-direction: column;
+  background-color: #f4f4f4;
+  overflow: scroll;
+  height: 100%;
 }
 
 .no-entries-message {
-  padding: 10px;
+  padding: 10px 10px 10px calc(10%);
   font-size: 12px;
   margin-top: 70px;
   color: #5f5f5f;
