--- a/src/component/PreviousEntry/PreviousEntry.scss
+++ b/src/component/PreviousEntry/PreviousEntry.scss
@@ -1,10 +1,25 @@
 .previous-container {
     // max-width: 420px;
-    height: 100px;
-    border: blue 1px solid;
+    min-height: 100px;
+    max-height: 100px;
+    border: #E5E5E5 1px solid;
     display: flex;
     flex-direction: row;
-    width: 100%;
+
+    &:hover {
+        background-color: #EFFFFB;
+        border-left: #06D6A0 6px solid;
+        
+        .weekday {
+            font-weight: bold;
+        }
+
+        .numday {
+            font-weight: bold;
+        }
+    }
+
+    
 }
 
 .date-section {
@@ -26,13 +41,17 @@
     font-size: 16px;
 }
 
-.day {
+.weekday {
     font-size: 16px;
+
+   
 }
 
-.dd {
+.numday {
     margin-top: 5px;
     font-size: 35px;
+
+   
 }
 
 .entry-title {
@@ -43,5 +62,5 @@
 
 .entry-content-preview {
     padding: 5px 0;
-    font-size: 10px;
+    font-size: 11px;
 }
