--- a/src/App.scss
+++ b/src/App.scss
@@ -13,13 +13,14 @@ html, body {
 }
 
 .sidebar {
-  flex: 3;
+  min-width: 375px;
+  max-width: 375px;
   display: flex;
   flex-direction: column;
 }
 
 .main-space {
- flex: 8;
+ flex: 1;
  display: flex;
  flex-direction: column;
 }
