--- a/src/component/NewEntry/NewEntry.scss
+++ b/src/component/NewEntry/NewEntry.scss
@@ -2,12 +2,37 @@
   flex: 7;
   display: flex;
   flex-direction: row;
+}
 
+.save-button {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  border: none;
+  border-radius: 15px;
+  background-color: #FFC43D;
+  top: 0;
+  right: 0;
+  width: 90px;
+  height: 30px;
+  margin: 40px 45px 0 0;
+}
+
+.save-img {
+  height: 14px;
+  padding: 0 10px;
+
+}
+
+.save-text {
+  font-size: 13.5px;
+  margin: 0;
 }
 
 .devotional-area {
   flex: 5;
   display: flex;
+  position: relative;
   flex-direction: column;
   margin: 20px 0 0 40px;
 }
@@ -27,7 +52,7 @@
 
 .reflected-passages {
   font-size: 14px;
-  margin-bottom: 30px;
+  margin-bottom: 7px;
 
   &:hover {
     outline: none;
@@ -35,6 +60,7 @@
 }
 
 .content {
+  margin-top: 10px;
   font-size: 12px;
 
   &:hover {
