--- a/src/component/PreviousEntry/PreviousEntry.scss
+++ b/src/component/PreviousEntry/PreviousEntry.scss
@@ -17,9 +17,19 @@
         .numday {
             font-weight: bold;
         }
-    }
 
-    
+        .hover-menu-items {
+            opacity: 1;
+            display: flex;
+            align-items: center;
+            margin-right: 10px;
+        }
+
+        .menu-icon {
+            height: 22px;
+            margin: 10px 15px 10px 10px;
+        }
+    }
 }
 
 .date-section {
@@ -64,3 +74,9 @@
     padding: 5px 0;
     font-size: 11px;
 }
+
+.hover-menu-items {
+    opacity: 0;
+    
+}
+
