--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 html, body {
   height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 #root {
@@ -7,30 +9,38 @@ html, body {
 }
 
 .App {
-  flex: 1;
-  display: flex;
   height: 100%;
+  display: grid;
+  grid-template-areas:    "title-card image-selector image-selector"
+                          "entries-list image-selector image-selector"
+                          "entries-list content card-list";
+  grid-template-columns: 375px 1fr 300px;
+  grid-template-rows: 180px 150px 1fr;
+  height: 100%;
+  width: 100%;
 }
 
-.sidebar {
-  min-width: 375px;
-  max-width: 375px;
-  display: flex;
-  flex-direction: column;
+.title-card {
+  grid-area: title-card;
 }
 
-.main-space {
- flex: 1;
- display: flex;
- flex-direction: column;
+.image-selector {
+  grid-area: image-selector;
 }
 
-.entries-container {
-  display: flex;
-  flex-direction: column;
+.entries-list {
+  grid-area: entries-list;
   background-color: #f4f4f4;
   overflow: scroll;
   height: 100%;
+}
+
+.content {
+  grid-area: content;
+}
+
+.card-list{
+  grid-area: card-list;
 }
 
 .no-entries-message {
