--- a/src/component/NewEntry/NewEntry.scss
+++ b/src/component/NewEntry/NewEntry.scss
@@ -1,9 +1,3 @@
-.new-entry {  
-  flex: 7;
-  display: flex;
-  flex-direction: row;
-}
-
 .save-button {
   display: flex;
   align-items: center;
@@ -30,49 +24,29 @@
 }
 
 .devotional-area {
-  flex: 5;
   display: flex;
   position: relative;
   flex-direction: column;
   margin: 20px 0 0 40px;
 }
 
-.right-card-area {
-  flex: 2;
-}
-
-.title {
-  font-size: 24px;
-  margin-bottom: 5px;
-
-  &:hover {
-    outline: none;
-  }
-}
-
-.reflected-passages {
-  font-size: 14px;
-  margin-bottom: 7px;
-
-  &:hover {
-    outline: none;
-  }
-}
-
-.content {
-  margin-top: 10px;
+.new-content {
+  border:none;
+  margin-top: 30px;
   font-size: 12px;
+  outline: none;
+  flex: 1;
 
-  &:hover {
-    outline: none;
-  }
+  // &:hover {
+  //   outline: none;
+  // }
 }
 
 .title {
   border: none;
   font-size: 20px;
   text-decoration: underline;
-  padding: 30px 10px 5px 15px;
+  padding: 30px 10px 5px 0px;
   color: #454545;
 
   &:hover {
@@ -87,21 +61,7 @@
 .reflected-passages {
   border: none;
   font-size: 14px;
-  padding: 5px 10px 10px 15px;
-
-  &:hover {
-    outline: none;
-  }
-  &:focus {
-    outline: none;
-  }
-}
-
-.content {
-  border: none;
-  font-size: 12px;
-  padding: 30px 10px 10px 15px;
-  height: 100%;
+  padding: 5px 10px 10px 0;
 
   &:hover {
     outline: none;
