--- a/src/App.scss
+++ b/src/App.scss
@@ -14,8 +14,8 @@ html, body {
   grid-template-areas:    "title-card image-selector image-selector"
                           "entries-list image-selector image-selector"
                           "entries-list content card-list";
-  grid-template-columns: 375px 1fr 300px;
-  grid-template-rows: 180px 150px 1fr;
+  grid-template-columns: 2fr 5fr 1.5fr;
+  grid-template-rows: 1fr 1fr 5fr;
   height: 100%;
   width: 100%;
 }
