--- a/src/component/ImageSelector/ImageSelector.scss
+++ b/src/component/ImageSelector/ImageSelector.scss
@@ -5,7 +5,8 @@
     align-items: center;
     background-color: #aaa;
     background-size: 100%;
-
+    position: relative;
+    
     .image-selector img {
         width: 100%;
     }
@@ -26,7 +27,6 @@ h3 {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    
     &::placeholder {
         color: #ccc;
         opacity: 1;
