--- a/src/component/TitleCard/TitleCard.scss
+++ b/src/component/TitleCard/TitleCard.scss
@@ -1,6 +1,5 @@
 .titlecard-container {
     position: relative;
-    max-height: 175px;
     min-height: 175px;
     display: flex;
     flex-direction: column;
@@ -10,6 +9,7 @@
 }
 
 .title-field {
+    padding: 0 !important;
     width: 100%;
     font-size: 32px;
     text-align: center;
@@ -27,6 +27,7 @@
 
 .name-field {
     width: 50%;
+    display: block;
     text-align: center;
     font-size: 15px;
     border: none;
@@ -61,4 +62,18 @@
     margin: 10px;
     bottom: 0;
     right: 0;
+}
+
+.titlecard-bottom {
+    display: block;
+
+}
+
+.word-wrap {
+    word-wrap: break-word;
+}
+
+.titlecard-name {
+    display: flex;
+    justify-content: center;
 }
