--- a/src/component/Card/Card.scss
+++ b/src/component/Card/Card.scss
@@ -21,18 +21,22 @@
   font-size: 12px;
   font-weight: lighter;
   margin-left: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .icon {
   position: relative;
   top: 15px;
   right: 10px;
-  margin-left: 10px;
+  padding-left: 10px;
 
 }
 
 .card-icons {
-  flex: 2;
+  flex: 1;
   display: flex;
   flex-direction: row;
   position: relative;
@@ -51,10 +55,10 @@
 }
 
 .color-picker {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 
 .popover {
