--- a/src/component/NewEntry/NewEntry.scss
+++ b/src/component/NewEntry/NewEntry.scss
@@ -1,15 +1,14 @@
 .save-button {
-  display: flex;
-  align-items: center;
   position: absolute;
   border: none;
-  border-radius: 15px;
-  background-color: #FFC43D;
-  top: 0;
-  right: 0;
-  width: 90px;
-  height: 30px;
-  margin: 40px 45px 0 0;
+  border-radius: 5px;
+  background-color: #418BF9;
+  padding: 10px 15px;
+  font-size: 13.5px;
+  font-weight: 600;
+  color: #fff;
+  right: 10px;
+  top: 30px;
 }
 
 .save-img {
@@ -19,7 +18,6 @@
 }
 
 .save-text {
-  font-size: 13.5px;
   margin: 0;
 }
 
@@ -27,19 +25,23 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  margin: 20px 0 0 40px;
+  margin: 20px 10px 0 40px;
+}
+
+.title-and-entry {
+  display: flex;
+  flex-direction: column;
 }
 
 .new-content {
   border:none;
   margin-top: 30px;
   font-size: 12px;
-  outline: none;
-  flex: 1;
-
-  // &:hover {
-  //   outline: none;
-  // }
+  height: 100%;
+  width: 100%;
+  &:focus {
+    outline: none;
+  }
 }
 
 .title {
